--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,28 @@
-# Prerequisites
-*.d
+# Created by https://www.toptal.com/developers/gitignore/api/cmake
+# Edit at https://www.toptal.com/developers/gitignore?templates=cmake
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
 
-# Precompiled Headers
-*.gch
-*.pch
+### CMake Patch ###
+# External projects
+*-prefix/
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# End of https://www.toptal.com/developers/gitignore/api/cmake
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+build/
+bin/
+.cache/
+.vscode/
+.idea/
+tasks.json
